--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "create-react-app": "^2.1.2",
     "express": "^4.16.4",
     "gravatar": "^1.8.0",
@@ -19,6 +20,9 @@
     "mongoose": "^5.4.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "validator": "^10.10.0"
   },
   "devDependencies": {
