--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "jest-resolve": "23.6.0",
     "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.23.0",
     "nodemon": "^1.18.9",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -47,6 +48,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.7.0",
+    "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
