--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "description": "social network for developers",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "client-install":"npm install --prefix client",
-    "start":"node server.js",
-    "server":"nodemon server.js",
-    "client":"npm start --prefix client",
-    "dev":"concurrently \"npm run server\"\"npm run client\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "anuj shrivastav",
   "license": "ISC",
