--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "description": "social network for developers",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client-install": "npm install --prefix client",
+ 
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild":"cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "anuj shrivastav",
   "license": "ISC",
